This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Crash in the get() method a single argument in dbm.ndbm
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-04-29 08:09 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 6630 merged serhiy.storchaka, 2018-04-29 08:17
PR 6631 merged miss-islington, 2018-04-29 09:38
PR 6633 merged serhiy.storchaka, 2018-04-29 12:03
Messages (6)
msg315883 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-04-29 08:09
Calling the get() method of the dbm.ndbm database object with only single argument causes a crash because the default value is set to NULL.

The regression was introduce in 3.5.

The proposed patch fixes the crash and add tests for the get() method for all dbm implementations.
msg315885 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-04-29 09:38
New changeset 2e38cc39330bd7f3003652869b644110a97a78d8 by Serhiy Storchaka in branch 'master':
bpo-33383: Fix crash in get() of the dbm.ndbm database object. (#6630)
https://github.com/python/cpython/commit/2e38cc39330bd7f3003652869b644110a97a78d8
msg315889 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-04-29 11:50
New changeset ee95feb69d937149bef3d245e87df1aef412b7fc by Serhiy Storchaka (Miss Islington (bot)) in branch '3.7':
[3.7] bpo-33383: Fix crash in get() of the dbm.ndbm database object. (GH-6630) (GH-6631)
https://github.com/python/cpython/commit/ee95feb69d937149bef3d245e87df1aef412b7fc
msg315891 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-04-29 12:44
New changeset 1b27ec6e0b40f81bf276eefa6b5bdb773b2a8890 by Serhiy Storchaka in branch '3.6':
[3.6] bpo-33383: Fix crash in get() of the dbm.ndbm database object. (GH-6630). (GH-6633)
https://github.com/python/cpython/commit/1b27ec6e0b40f81bf276eefa6b5bdb773b2a8890
msg317193 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-05-20 17:50
There was already an open issue for this (#31868).
msg317208 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-20 23:18
Thank you for reminder Zackery. I forgot about that issue!
History
Date User Action Args
2022-04-11 14:58:59adminsetgithub: 77564
2018-05-20 23:20:54serhiy.storchakalinkissue31868 superseder
2018-05-20 23:18:27serhiy.storchakasetmessages: + msg317208
2018-05-20 17:50:53ZackerySpytzsetnosy: + ZackerySpytz
messages: + msg317193
2018-04-29 14:08:46serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-04-29 12:44:23serhiy.storchakasetmessages: + msg315891
2018-04-29 12:03:43serhiy.storchakasetpull_requests: + pull_request6329
2018-04-29 11:50:28serhiy.storchakasetmessages: + msg315889
2018-04-29 09:38:44miss-islingtonsetpull_requests: + pull_request6327
2018-04-29 09:38:12serhiy.storchakasetmessages: + msg315885
2018-04-29 08:17:30serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request6326
2018-04-29 08:09:38serhiy.storchakacreate