[3.6] bpo-33383: Fix crash in get() of the dbm.ndbm database object. (GH-6630). (GH-6633)

(cherry picked from commit 2e38cc39330bd7f3003652869b644110a97a78d8)